more updates to gui, automatic gene finding implemented, nty